<resources>
    <string name="app_name">Pomodoro</string>

    <!--Names of the buttons-->
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <!--default timers-->
    <string name="default_pomodoro_timer">25:00</string>
    <string name="default_short_break_timer">05:00</string>
    <string name="default_long_break_timer">15:00</string>

    <!--Names of the timers-->
    <string name="pomodoro">Pomodoro</string>
    <string name="short_break">Short Break</string>
    <string name="long_break">Long Break</string>
</resources>